# norn

./: .coderabbit.yaml  .gitignore  .mimir.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  build.rs  dist-workspace.toml  mise.toml
.norn/: config.yaml
.vault/: config.yaml
crates/norn-cli/: Cargo.toml
crates/norn-cli/src/: cli.rs  grammar_flags.rs  lib.rs  routed.rs  test_support.rs
crates/norn-cli/src/commands/: apply.rs  args.rs  audit.rs  count.rs  delete.rs  describe.rs  edit.rs  find.rs  get.rs  mod.rs  move_doc.rs  new.rs  repair.rs  rewrite_wikilink.rs  set.rs  validate.rs  vault.rs
crates/norn-cli/src/display/: conversation.rs  diagnostic.rs  emit.rs  fix_hints.rs  format.rs  mod.rs  output.rs  presenter.rs  prompt.rs  sink.rs
crates/norn-cli/src/display/render/: apply.rs  audit.rs  count.rs  delete.rs  describe.rs  edit.rs  find.rs  get.rs  mod.rs  move_doc.rs  new.rs  repair.rs  rewrite_wikilink.rs  set.rs  shared.rs  validate.rs  vault.rs
crates/norn-cli/src/help/: examples.rs  extract.rs  mod.rs  model.rs  render.rs
crates/norn-cli/src/output/: glyphs.rs  mod.rs  pager.rs  palette.rs  primitives.rs  projection.rs
crates/norn-cli/tests/: commands_stream_guard.rs  comment_truth_guard.rs  render_stream_guard.rs  typed_severity_guard.rs
crates/norn-client/: Cargo.toml
crates/norn-client/src/: addr.rs  error.rs  lib.rs  session.rs  summon.rs
crates/norn-client/tests/: summon_lifecycle.rs
crates/norn-client/tests/common/: mod.rs
crates/norn-config/: Cargo.toml
crates/norn-config/src/: error.rs  home.rs  lib.rs  logs.rs  model.rs  registry.rs  resolve.rs
crates/norn-config/tests/: public_api.rs
crates/norn-core/: Cargo.toml
crates/norn-core/src/: env.rs  grammar.rs  lib.rs  plan.rs  seq_alloc.rs  target.rs
crates/norn-core/src/apply/: envelope.rs  executor.rs  fsops.rs  mod.rs  passes.rs  preconditions.rs  repair_apply.rs  report.rs  transaction.rs
crates/norn-core/src/cache/: apply_size_independence.rs  canonical.rs  change_detection.rs  eav.rs  engine.rs  error.rs  find.rs  freshness.rs  generation.rs  invalidation.rs  live_examples.rs  mod.rs  query_diagnostics.rs  query_documents.rs  query_links.rs  query_show.rs  reader.rs  schema.rs  slot.rs  status.rs  writer.rs  writer_queue.rs
crates/norn-core/src/domain/: display.rs  mod.rs
crates/norn-core/src/edit/: mod.rs  ops.rs  transform.rs
crates/norn-core/src/graph/: aliases.rs  build.rs  mod.rs  pattern.rs
crates/norn-core/src/links/: markdown.rs  mod.rs  resolve.rs  target.rs  wikilink.rs
crates/norn-core/src/mutate/: apply.rs  coerce.rs  delete.rs  edit.rs  mod.rs  move_doc.rs  new.rs  rewrite_wikilink.rs  set.rs
crates/norn-core/src/planner/: mod.rs
crates/norn-core/src/planner/findings/: mod.rs
crates/norn-core/src/planner/intent/: mod.rs  move_folder.rs  rewrite_wikilink.rs
crates/norn-core/src/query/: filter_args.rs  mod.rs
crates/norn-core/src/read/: count.rs  describe.rs  find.rs  get.rs  mod.rs  repair.rs  validate.rs
crates/norn-core/src/standards/: apply.rs  checks.rs  config.rs  defaults.rs  duration.rs  engine.rs  findings.rs  index_policy.rs  mod.rs  op.rs  path_match.rs  predicates.rs  repair.rs  substitution.rs  summary.rs  template_refs.rs  validate_filter.rs
crates/norn-core/src/standards/repair/: link_risk.rs  warnings.rs
crates/norn-core/src/telemetry/: ids.rs  mod.rs  read.rs  store.rs
crates/norn-fixtures/: Cargo.toml
crates/norn-fixtures/src/: config.rs  contract.rs  dates.rs  expansion.rs  lib.rs  main.rs  rng.rs  testing.rs  words.rs  yaml.rs  zoo.rs
crates/norn-fixtures/tests/: determinism.rs  oracle_smoke.rs  zoo_inventory.rs
crates/norn-fixtures/tests/common/: mod.rs
crates/norn-frontmatter/: Cargo.toml
crates/norn-frontmatter/src/: diagnostic.rs  heading.rs  lib.rs  section.rs  span.rs  wikilink.rs
crates/norn-frontmatter/src/frontmatter/: edit.rs  mod.rs  offsets.rs  parse.rs  quote.rs
crates/norn-mcp/: Cargo.toml
crates/norn-mcp/src/: lib.rs  mutation_result.rs  server.rs
crates/norn-mcp/src/tools/: apply.rs  audit.rs  count.rs  delete.rs  describe.rs  edit.rs  find.rs  get.rs  mod.rs  move_doc.rs  new.rs  repair.rs  rewrite_wikilink.rs  set.rs  validate.rs
crates/norn-owner/: Cargo.toml
crates/norn-owner/src/: config_load.rs  lib.rs  lifecycle.rs  runtime.rs
crates/norn-owner/tests/: config_error_surface.rs  dynamic_field_gate.rs  get_markdown_selection_guard.rs  mutation_dispatch_guard.rs  vault_root_error_surface.rs  warmup_shutdown.rs
crates/norn-parity/: Cargo.toml
crates/norn-parity/src/: cases.rs  consistency.rs  exec.rs  fixtures.rs  ledger.rs  lib.rs  main.rs  mcp.rs  normalize.rs  paths.rs  poststate.rs  report.rs  run.rs  verdict.rs
crates/norn-parity/tests/: bin_smoke.rs  help_walker.rs  ledger.rs  mcp.rs  mutation.rs  self_check.rs  verdicts.rs
crates/norn-parity/tests/common/: mod.rs
crates/norn-run/: Cargo.toml
crates/norn-wire/: Cargo.toml
crates/norn-wire/src/: audit.rs  control.rs  filter.rs  finding.rs  lib.rs  mutate.rs  paging.rs  plan.rs  presence.rs  read.rs  report.rs
crates/vault-links/: Cargo.toml
crates/vault-links/src/: anchor.rs  block.rs  commonmark.rs  lib.rs  resolve.rs  wikilink.rs
docs/: agent-workflows.md  architecture.md  cache.md  commands.md  concepts.md  configuration.md  development.md  errors.md  glossary.md  installation.md  mcp-server.md  parity-ledger.toml  quickstart.md  releases.md  rule-shape.md  service.md  validation.md
examples/: README.md  config-minimal.yaml  config-typed-notes.yaml  repair-recipe.sh
retired/: CLAUDE.md  Cargo.toml
src/: applier.rs  apply_cmd.rs  apply_report.rs  audit.rs  cache.rs  cache_cmd.rs  cli.rs  config_loader.rs  core.rs  delete_doc.rs  dispatch.rs  filter.rs  filter_args.rs  frontmatter.rs  grammar.rs  graph.rs  init.rs  init_scan.rs  lib.rs  links.rs  main.rs  migrate_cmd.rs  migration_plan.rs  move_doc.rs  query.rs  repair_apply.rs  rewrite_wikilink_cmd.rs  route_wire.rs  seq_alloc.rs  service.rs  standards.rs  target.rs  validate_filter.rs
tests/: audit.rs  (+85 more)
(+452 files in other folders)
