[workspace]
resolver = "2"
members = ["crates/*"]

# The ADR 0018 crate map. Boundary invariants are held by dependency
# direction — an edge that would let a crate perform another's exclusive
# effect (cache-open: owner; spawn/dial: client; central-config IO:
# config) is a rejected PR shape. The pre-0018 tree lives in retired/ —
# documentation, not source; see retired/CLAUDE.md for the porting
# burn-down.

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
