[package]
name = "norn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
norn-client = { path = "../norn-client" }
norn-config = { path = "../norn-config" }
norn-wire = { path = "../norn-wire" }
clap = { version = "4.5", features = ["derive"] }
anstyle = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
