[package]
name = "norn-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Central config + vault registry — the machine-local authoritative source of vault identity, resolution order, and reverse lookup (ADR 0017)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
fs2 = "0.4"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
