[package]
name = "norn-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
norn-wire = { path = "../norn-wire" }
norn-frontmatter = { path = "../norn-frontmatter" }

anyhow = "1.0"
camino = { version = "1.1", features = ["serde1"] }
globset = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
