[package]
name = "norn-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
norn-wire = { path = "../norn-wire" }
norn-frontmatter = { path = "../norn-frontmatter" }

anyhow = "1.0"
blake3 = "1.5"
camino = { version = "1.1", features = ["serde1"] }
globset = "0.4"
pulldown-cmark = "0.13"
regex = "1.10"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
strsim = "0.11"
thiserror = "2.0"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3"
