[package]
name = "norn-owner"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
norn-core = { path = "../norn-core" }
norn-wire = { path = "../norn-wire" }
anyhow = "1.0"
camino = "1.1"
fs2 = "0.4"
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "signal", "time", "sync", "io-util"] }

[dev-dependencies]
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
