[package]
name = "norn-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "The Params/Report request/response wire vocabulary every side of norn speaks — pure serde types, no logic or IO"

[package.metadata.dist]
dist = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
