[package]
name = "norn-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "The Params/Report request/response wire vocabulary every side of norn speaks — pure serde types, no logic or IO"

[package.metadata.dist]
dist = false

[dependencies]
blake3 = "1.5"
camino = { version = "1.1", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_yaml = "0.9"
