[package]
name = "vault-links"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
camino = { workspace = true }
pulldown-cmark = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
vault-core = { path = "../vault-core" }
vault-frontmatter = { path = "../vault-frontmatter" }
